# src/main/kotlin/yadwy/app/yadwyservice/identity/api/HelloController.kt
@@ -1,15 +1,0 @@
-package yadwy.app.yadwyservice.identity.api
-
-import app.yadwy.api.HelloApi
-import app.yadwy.model.HelloResponse
-import org.springframework.http.ResponseEntity
-import org.springframework.web.bind.annotation.RestController
-import java.time.LocalDateTime
-
-@RestController
-class HelloController : HelloApi {
-
-    override fun sayHello(): ResponseEntity<HelloResponse> {
-        return ResponseEntity.ok(HelloResponse("Hello World!", LocalDateTime.now()))
-    }
-}
