# src/main/kotlin/yadwy/app/yadwyservice/identity/application/models/RefreshTokenResponse.kt
@@ -1,0 +1,5 @@
+package yadwy.app.yadwyservice.identity.application.models
+
+data class RefreshTokenResponse(
+    val accessToken: String
+)
